adding more prayers

--- a/gebeden.html
+++ b/gebeden.html
@@ -292,6 +292,175 @@
                             <label for="vl">Vlaams</label>
                         </fieldset>
                     </div>
+                    <div data-role="collapsible">
+                        <h2>Oefening van geloof</h2>
+                        <div class="geloof nl">
+                            <p>Mijn Heer en mijn God,<br/>
+                                ik geloof; dat Gij zijt één God in drie Personen,<br/>
+                                de Vader, de Zoon en de Heilige Geest;<br/>
+                                dat God de Zoon voor ons is mens geworden en aan het kruis gestorven;<br/>
+                                dat Gij het goede loont en het kwade straft.<br/>
+                                Ik geloof alles wat Gij hebt geopenbaard, en door de heilige Kerk ons leert.<br/>
+                                Dat geloof ik vast, omdat Gij het hebt gezegd, die alles weet en altijd waarheid spreekt.<br/>
+                                Heer, vermeerder mijn geloof!</p>
+                            <p>Amen</p>
+                        </div>
+                        <div class="geloof vl hidden">
+                            <p>Mijn Heer en mijn God,<br/>
+                                ik geloof vast al wat Gij geopenbaard hebt<br/>
+                                en door de heilige Kerk mij voorhoudt te geloven,<br/>
+                                omdat Gij de opperste en onfeilbare Waarheid zijt.<br/>
+                                In dit geloof wil ik leven en sterven.</p>
+                            <p>Ik geloof in het bijzonder:<br/>
+                                dat er is één God;<br/>
+                                dat er zijn drie goddelijke Personen, <br/>
+                                God de Vader, God de Zoon, en God de heilige Geest;<br/>
+                                dat God de Zoon is mens geworden en ons door zijn dood heeft verlost;<br/>
+                                dat God de loner is van het goed en de straffer van het kwaad.</p>
+                            <p>Amen</p>
+                        </div>
+                        <div class="geloof la hidden">
+                            <p>Dominus Deus,<br/>
+                                firma fide credo <br/>
+                                et confiteor omnia <br/>
+                                et singula quae sancta Ecclesia Catholica proponit, <br/>
+                                quia tu, Deus, ea omnia revelasti, <br/>
+                                qui es aeterna veritas <br/>
+                                et sapientia quae nec fallere nec falli potest. <br/>
+                                In hac fide vivere et mori statuo.</p>
+                            <p>Amen</p>
+                        </div>
+                        <fieldset data-role="controlgroup" data-type="horizontal"  data-mini="true">
+                            <input type="radio" name="geloof" id="nl" value="nl" checked="checked" />
+                            <label for="nl">Nederlands</label>
+                            <input type="radio" name="geloof" id="vl" value="vl" />
+                            <label for="vl">Vlaams</label>
+                            <input type="radio" name="geloof" id="la" value="la" />
+                            <label for="la">Latijn</label>
+                        </fieldset>
+                    </div>
+                    <div data-role="collapsible">
+                        <h2>Oefening van hoop</h2>
+                        <div class="hoop nl">
+                            <p>Oneindig goede God,<br/>
+                                ik hoop, door de verdiensten van Jezus Christus, van U te verkrijgen:<br/>
+                                de eeuwige zaligheid en alle genaden, die ik daarvoor nodig heb.<br/>
+                                Dat hoop ik met een vast vertrouwen, omdat Gij het hebt beloofd, <br/>
+                                die almachtig zijt, oneindig goed voor ons en getrouw in uw  beloften.<br/>
+                                Heer versterk mijn hoop!</p>
+                            <p>Amen</p>
+                        </div>
+                        <div class="hoop vl hidden">
+                            <p>Mijn Heer en mijn God,<br/>
+                                ik hoop met een vast betrouwen van U te bekomen, <br/>
+                                door de verdiensten van Jezus Christus <br/>
+                                het eeuwig geluk en de genaden om het te verdienen, <br/>
+                                omdat Gij oneindig goed zijt voor ons, almachtig en getrouw in uw beloften.<br/>
+                                In deze hoop wil ik leven en sterven.</p>
+                            <p>Amen</p>
+                        </div>
+                        <div class="hoop la hidden">
+                            <p>Domine Deus,<br/>
+                                spero per gratiam tuam remissionem omnium peccatorum, <br/>
+                                et post hanc vitam aeternum felicitatem me esse consecuturum: <br/>
+                                quia tu promisisti, <br/>
+                                qui es infinite potens, fidelis, benignus, et miserocors. <br/>
+                                In hac spe vivere et mori statuo.</p>
+                            <p>Amen</p>
+                        </div>
+                        <fieldset data-role="controlgroup" data-type="horizontal"  data-mini="true">
+                            <input type="radio" name="hoop" id="nl" value="nl" checked="checked" />
+                            <label for="nl">Nederlands</label>
+                            <input type="radio" name="hoop" id="vl" value="vl" />
+                            <label for="vl">Vlaams</label>
+                            <input type="radio" name="hoop" id="la" value="la" />
+                            <label for="la">Latijn</label>
+                        </fieldset>
+                    </div>
+                    <div data-role="collapsible">
+                        <h2>Oefening van liefde</h2>
+                        <div class="liefde nl">
+                            <p>God van Liefde,<br/>
+                                ik bemin U boven alles en uit geheel mijn hart,<br/>
+                                omdat Gij oneindig goed en oneindig beminnelijk zijt.<br/>
+                                Uit liefde tot U bemin ik ook alle mensen als mijzelf.<br/>
+                                Heer, geef mij steeds meerliefde!</p>
+                            <p>Amen</p>
+                        </div>
+                        <div class="liefde vl hidden">
+                            <p>Mijn Heer en Mijn God,<br/>
+                                ik bemin U bovenal, uit geheel mijn hart,<br/>
+                                uit geheel mijn ziel en uit al mijn krachten,<br/>
+                                omdat Gij oneindig volmaakt en alle liefde waardig zijt.<br/>
+                                En ik bemin mijn naaste gelijk mij zelf,<br/>
+                                uit liefde tot U.<br/>
+                                In deze liefde wil ik leven en sterven.</p>
+                            <p>Amen</p>
+                        </div>
+                        <div class="liefde la hidden">
+                            <p>Domine Deus, <br/>
+                                amo te super omnia et proximum meum propter te,<br/>
+                                quia tu es summum, infinitum, et perfectissimum bonum, <br/>
+                                omni dilectione dignum. <br/>
+                                In hac caritate vivere et mori statuo.</p>
+                            <p>Amen</p>
+                        </div>
+                        <fieldset data-role="controlgroup" data-type="horizontal"  data-mini="true">
+                            <input type="radio" name="liefde" id="nl" value="nl" checked="checked" />
+                            <label for="nl">Nederlands</label>
+                            <input type="radio" name="liefde" id="vl" value="vl" />
+                            <label for="vl">Vlaams</label>
+                            <input type="radio" name="liefde" id="la" value="la" />
+                            <label for="la">Latijn</label>
+                        </fieldset>
+                    </div>
+                    <div data-role="collapsible">
+                        <h2>Oefening van berouw</h2>
+                        <div class="berouw nl">
+                            <p>Heer mijn God, ik heb echt berouw. <br/>
+                                Ik betreur het dat ik kwaad heb gedaan <br/>
+                                en het goede heb nagelaten. <br/>
+                                Door mijn zonden heb ik U beledigd die mijn hoogste goed zijt, <br/>
+                                en alle liefde waardig. <br/>
+                                Het is mijn vaste voornemen, mij, met de hulp van uw genade, <br/>
+                                te bekeren, niet meer te zondigen en te vermijden <br/>
+                                wat tot zonde kan leiden. </p>
+                            <p>Amen</p>
+                        </div>
+                        <div class="berouw vl hidden">
+                            <p>Mijn Heer en mijn God, <br/>
+                                het is mij leed dat ik tegen uw opperste majesteit misdaan heb. <br/>
+                                Ik verfoei al mijn zonden, <br/>
+                                niet alleen omdat ik uw straffen heb verdiend;<br/>
+                                maar vooral omdat ze U mishagen, <br/>
+                                die oneindig volmaakt en alle liefde waardig zijt. <br/>
+                                Ik maak het vast voornemen, <br/>
+                                mijn leven te beteren <br/>
+                                en de gelegenheden tot zonde te vluchten. <br/>
+                                In dit berouw wil ik leven en sterven.</p>
+                            <p>Amen</p>
+                        </div>
+                        <div class="berouw la hidden">
+                            <p>Deus meus, <br/>
+                                ex toto corde paenitet me omnium meorum peccatorum, <br/>
+                                eaque detestor, quia peccando, <br/>
+                                non solum poenas a te iuste statutas promeritus sum, <br/>
+                                sed praesertim quia offendi te, <br/>
+                                summum bonum, <br/>
+                                ac dignum qui super omnia diligaris. <br/>
+                                Ideo firmiter propone, adiuvante gratia tua,<br/>
+                                de cetero me non peccaturum peccandique occasiones proximas fugiturum.</p>
+                            <p>Amen</p>
+                        </div>
+                        <fieldset data-role="controlgroup" data-type="horizontal"  data-mini="true">
+                            <input type="radio" name="berouw" id="nl" value="nl" checked="checked" />
+                            <label for="nl">Nederlands</label>
+                            <input type="radio" name="berouw" id="vl" value="vl" />
+                            <label for="vl">Vlaams</label>
+                            <input type="radio" name="berouw" id="la" value="la" />
+                            <label for="la">Latijn</label>
+                        </fieldset>
+                    </div>
                 </div>
                 <!-- collapsible set -->
             </div>
