--- a/mobiele-websites.html
+++ b/mobiele-websites.html
@@ -47,6 +47,11 @@
                                 Bijbelvertaling <i>online</i></small>
                         </a>
                     </li>
+                    <li>
+                        <a href="http://www.pastoralezorg.be/30/rituelen-en-gebeden">
+                            <img src="img/elisabeth.png" />Elisabeth<br /><small>Pastorale zorg - gebeden en rituelen</small>
+                        </a>
+                    </li>
                 </ul>
             </div>
             <!-- content -->
