--- a/android-apps.html
+++ b/android-apps.html
@@ -32,14 +32,16 @@
                 <ul data-role="listview">
                     <li>
                         <a
-                            href="http://dagelijksevangelie.org/main.php?module=smart&amp;language=NL">
-                            <img src="img/evangelizo.png" />Evangelizo<br /><small>Dagelijkse
+                            href="http://dagelijksevangelie.org/main.php?module=smart&amp;language=NL" title="Evangelizo - Dagelijkse
+                                schriftlezingen en heiligenlevens">
+                            <img src="img/evangelizo.png" alt="Evangelizo"/>Evangelizo<br /><small>Dagelijkse
                                 schriftlezingen en heiligenlevens</small>
                         </a>
                     </li>
                     <li>
-                        <a href="http://bible.is">
-                            <img src="img/bible.is.png" />Bible.is<br /><small>De Bijbel lezen,
+                        <a href="http://bible.is" title="Bible.is - De Bijbel lezen,
+                                beluisteren en bekijken!">
+                            <img src="img/bible.is.png" alt="Bible.is"/>Bible.is<br /><small>De Bijbel lezen,
                                 beluisteren en bekijken!</small>
                         </a>
                     </li>
