--- a/mobiele-websites.html
+++ b/mobiele-websites.html
@@ -23,7 +23,7 @@
         <div data-role="page">
             
             <div data-role="header">
-                <a data-rel="back" data-icon="back">terug</a>
+                <a data-rel="back" data-icon="back" title="terug">terug</a>
                 <h1>Mobiele websites</h1>
             </div>
             <!-- /header -->
@@ -31,25 +31,30 @@
             <div data-role="content">
                 <ul data-role="listview">
                     <li>
-                        <a href="http://www.gewijderuimte.org">
-                            <img src="img/gewijde-ruimte.png" />Gewijde ruimte<br /><small>Dagelijks
+                        <a href="http://www.gewijderuimte.org" title="Dagelijk gebed online">
+                            <img src="img/gewijde-ruimte.png" alt="Gewijde ruimte"/>Gewijde ruimte<br /><small>Dagelijks
                                 gebed online</small>
                         </a>
                     </li>
                     <li>
-                        <a href="http://www.missale.net/?lang=nl">
-                            <img src="img/missale.png" />Missale<br /><small>Prentenmissaal</small>
+                        <a href="http://www.missale.net/?lang=nl" title="Prentenmissaal">
+                            <img src="img/missale.png" alt="Missale"/>Missale<br /><small>Prentenmissaal</small>
                         </a>
                     </li>
                     <li>
-                        <a href="http://www.bijbelmobiel.nl">
-                            <img src="img/bijbelmobiel.png" />BijbelMobiel<br /><small>De Nieuwe
+                        <a href="http://www.bijbelmobiel.nl" title="De Nieuwe Bijbelvertaling">
+                            <img src="img/bijbelmobiel.png" alt="BijbelMobiel"/>BijbelMobiel<br /><small>De Nieuwe
                                 Bijbelvertaling <i>online</i></small>
                         </a>
                     </li>
                     <li>
-                        <a href="http://www.pastoralezorg.be/30/rituelen-en-gebeden">
-                            <img src="img/elisabeth.png" />Elisabeth<br /><small>Pastorale zorg - gebeden en rituelen</small>
+                        <a href="http://www.pastoralezorg.be/30/rituelen-en-gebeden" title="Pastorale zorg - gebeden en rituelen">
+                            <img src="img/elisabeth.png" alt="Elisabeth"/>Elisabeth<br /><small>Pastorale zorg - gebeden en rituelen</small>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="http://www.mariakapellen.nl/Plaatsnamen.htm" title="Mariakapellen">
+                            <img src="img/mariakapellen.png" alt="Mariakapellen"/>Mariakapellen<br /><small>in Nederland en Vlaanderen</small>
                         </a>
                     </li>
                 </ul>
