--- a/mobiele-websites.html
+++ b/mobiele-websites.html
@@ -37,6 +37,11 @@
                         </a>
                     </li>
                     <li>
+                        <a href="http://retreats.sacredspace.ie/nl" title="Vastenretraite">
+                            <img src="img/gewijde-ruimte.png" alt="Vastenretraite"/>Vastenretraite
+                        </a>
+                    </li>
+                    <li>
                         <a href="http://www.missale.net/?lang=nl" title="Prentenmissaal">
                             <img src="img/missale.png" alt="Missale"/>Missale<br /><small>Prentenmissaal</small>
                         </a>
