--- a/filmpjes.html
+++ b/filmpjes.html
@@ -48,8 +48,28 @@
                         <img src="img/petrus.jpg" />
                         <ul data-role="listview">
                             <li>
-                                <a href="http://www.youtube.com/watch?feature=player_detailpage&v=slfquNtiWzo#t=817s">
+                                <a href="http://www.youtube.com/watch?v=ckuqa7dMBGc">
+                                    <img src="img/petrus.jpg" />Ontslag van Paus Benedictus XVI<br/>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="http://www.youtube.com/watch?feature=player_detailpage&amp;v=slfquNtiWzo#t=817s">
                                     <img src="img/petrus.jpg" />Kerstmis 2012<br/>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="http://www.youtube.com/watch?v=QyB8oEIWh0s">
+                                    <img src="img/petrus.jpg" />Pasen 2012<br/>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="http://www.youtube.com/watch?v=NAgnQqtNQyU">
+                                    <img src="img/petrus.jpg" />Habemus Papam - 19 april 2005<br/>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="http://www.youtube.com/watch?feature=player_detailpage&amp;v=SZ0Cw5LmkDI#t=98s">
+                                    <img src="img/petrus.jpg" />Begrafenis Paus Johannes-Paulus II - Litanie van alle Heiligen - 8 april 2005<br/>
                                 </a>
                             </li>
                         </ul>
