--- a/filmpjes.html
+++ b/filmpjes.html
@@ -49,7 +49,7 @@
                         <ul data-role="listview">
                             <li>
                                 <a href="http://www.youtube.com/watch?v=ckuqa7dMBGc">
-                                    <img src="img/petrus.jpg" />Ontslag van Paus Benedictus XVI<br/>
+                                    <img src="img/petrus.jpg" />Ontslag van Paus Benedictus XVI<br/><small>11 februari 2013</small>
                                 </a>
                             </li>
                             <li>
@@ -64,12 +64,12 @@
                             </li>
                             <li>
                                 <a href="http://www.youtube.com/watch?v=NAgnQqtNQyU">
-                                    <img src="img/petrus.jpg" />Habemus Papam - 19 april 2005<br/>
+                                    <img src="img/petrus.jpg" />Habemus Papam<br/><small>19 april 2005</small>
                                 </a>
                             </li>
                             <li>
                                 <a href="http://www.youtube.com/watch?feature=player_detailpage&amp;v=SZ0Cw5LmkDI#t=98s">
-                                    <img src="img/petrus.jpg" />Begrafenis Paus Johannes-Paulus II - Litanie van alle Heiligen - 8 april 2005<br/>
+                                    <img src="img/petrus.jpg" />Begrafenis Paus Johannes-Paulus II - Litanie van alle Heiligen<br/><small>8 april 2005</small>
                                 </a>
                             </li>
                         </ul>
