--- a/filmpjes.html
+++ b/filmpjes.html
@@ -48,6 +48,11 @@
                         <img src="img/petrus.jpg" />
                         <ul data-role="listview">
                             <li>
+                                <a href="http://www.youtube.com/watch?v=aCLMXQvHnns">
+                                    <img src="img/petrus.jpg" />Habemus Papam - Franciscus<br/><small>13 maart 2013</small>
+                                </a>
+                            </li>
+                            <li>
                                 <a href="http://www.youtube.com/watch?v=ckuqa7dMBGc">
                                     <img src="img/petrus.jpg" />Ontslag van Paus Benedictus XVI<br/><small>11 februari 2013</small>
                                 </a>
@@ -64,12 +69,17 @@
                             </li>
                             <li>
                                 <a href="http://www.youtube.com/watch?v=NAgnQqtNQyU">
-                                    <img src="img/petrus.jpg" />Habemus Papam<br/><small>19 april 2005</small>
+                                    <img src="img/petrus.jpg" />Habemus Papam - Benedictus XVI<br/><small>19 april 2005</small>
                                 </a>
                             </li>
                             <li>
                                 <a href="http://www.youtube.com/watch?feature=player_detailpage&amp;v=SZ0Cw5LmkDI#t=98s">
                                     <img src="img/petrus.jpg" />Begrafenis Paus Johannes-Paulus II - Litanie van alle Heiligen<br/><small>8 april 2005</small>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="http://www.youtube.com/watch?v=uPtKVeJKoYM">
+                                    <img src="img/petrus.jpg" />Habemus Papam - Johannes-Paulus II<br/><small>16 oktober 1978</small>
                                 </a>
                             </li>
                         </ul>
