twee litanies toegevoegd

--- a/gebeden.html
+++ b/gebeden.html
@@ -461,6 +461,186 @@
                             <label for="la">Latijn</label>
                         </fieldset>
                     </div>
+                    <div data-role="collapsible">
+                        <h2>Litanie van alle heiligen</h2>
+                        <div>
+                            <p>
+                                God, hemelse Vader, ontferm U over ons.<br/>
+                                God, Zoon, Verlosser van de wereld, ontferm U over ons.<br/>
+                                God, heilige Geest, ontferm U over ons.<br/>
+                                Heilige Drievuldigheid, één God, ontferm U over ons.<br/>
+                            </p>
+                            <p>
+                                Heilige Maria, bid voor ons.<br/>
+                                Heilige Moeder van God, bid voor ons.<br/>
+                                Heilige Maagd der Maagden, bid voor ons.<br/>
+                                Heilige Michael, Gabriel en Rafael, bidt voor ons.<br/>
+                                Heilige Abraham, bid voor ons.<br/>
+                                Heilige Mozes, bid voor ons.<br/>
+                                Heilige Elia, bid voor ons.<br/>
+                                Heilige Johannes de Doper, bid voor ons.<br/>
+                                Heilige Jozef, bid voor ons.<br/>
+                                Alle heilige patriarchen en profeten, bid voor ons.<br/>
+                                Heilige Petrus en Paulus, bidt voor ons.<br/>
+                                Heilige Andreas, bid voor ons.<br/>
+                                Heilige Johannes en Jacobus, bid voor ons.<br/>
+                                Heilige Thomas, bid voor ons.<br/>
+                                Heilige Matteus, bid voor ons.<br/>
+                                Alle heilige Apostelen, bidt voor ons.<br/>
+                                Heilige Lucas, bid voor ons.<br/>
+                                Heilige Marcus, bid voor ons.<br/>
+                                Heilige Barnabas, bid voor ons.<br/>
+                                Heilige Maria Magdalena, bid voor ons.<br/>
+                                Alle heilige leerlingen des Heren, bidt voor ons.<br/>
+                                Heilige Stefanus, bid voor ons.<br/>
+                                Heilige Ignatius van Antiochië, bid voor ons.<br/>
+                                Heilige Polycarpus, bid voor ons.<br/>
+                                Heilige Justinus, bid voor ons.<br/>
+                                Heilige Laurentius, bid voor ons.<br/>
+                                Heilige Cyprianus, bid voor ons.<br/>
+                                Heilige Bonifatius, bid voor ons.<br/>
+                                Heilige Stanislas, bid voor ons.<br/>
+                                Heilige Thomas Becket, bid voor ons.<br/>
+                                Heilige John Fisher en Thomas More, bidt voor ons.<br/>
+                                Heilige Paulus Miki, bidt voor ons.<br/>
+                                Heilige Isaac Jogues en Johannes de Brébeuf, bidt voor ons.<br/>
+                                Heilige Petrus Chanel, bid voor ons.<br/>
+                                Heilige Carolus Lwanga, bid voor ons.<br/>
+                                Heilige Perpetua en Felicitas, bidt voor ons.<br/>
+                                Heilige Agnes, bid voor ons.<br/>
+                                Heilige Maria Gorettl, bid voor ons.<br/>
+                                Alle heilige martelaren, bidt voor ons.<br/>
+                                Heilige Leo en Gregorius, bidt voor ons.<br/>
+                                Heilige Ambrosius, bid voor ons.<br/>
+                                Heilige Hieronymus, bid voor ons.<br/>
+                                Heilige Augustinus, bid voor ons.<br/>
+                                Heilige Athanasius, bid voor ons.<br/>
+                                Heilige Basilius en Gregorius van Nazianze, bidt voor ons.<br/>
+                                Heilige Johannes Chrysostomus, bid voor ons.<br/>
+                                Heilige Martinus, bid voor ons.<br/>
+                                Heilige Patricius, bid voor ons.<br/>
+                                Heilige Cyrillus en Methodius, bidt voor ons.<br/>
+                                Heilige Carolus Borromeus, bid voor ons.<br/>
+                                Heilige Franciscus van Sales, bid voor ons.<br/>
+                                Heilige Pius X, bid voor ons.<br/>
+                                Heilige Antonius, bid voor ons.<br/>
+                                Heilige Benedictus, bid voor ons.<br/>
+                                Heilige Bernardus, bid voor ons.<br/>
+                                Heilige Franciscus en Dominicus, bidt voor ons.<br/>
+                                Heilige Thomas van Aquino, bid voor ons.<br/>
+                                Heilige Ignatius van Loyola, bid voor ons.<br/>
+                                Heilige Franciscus Xaverius, bid voor ons.<br/>
+                                Heilige Vincentius de Paul, bid voor ons.<br/>
+                                Heilige Johannes Maria Vianney, bid voor ons.<br/>
+                                Heilige Johannes Bosco, bid voor ons.<br/>
+                                Heilige Catharina van Siëna, bid voor ons.<br/>
+                                Heilige Teresia van Avila, bid voor ons.<br/>
+                                Heilige Rosa van Lima, bid voor ons.<br/>
+                                Heilige Lodewijk, bid voor ons.<br/>
+                                Heilige Monica, bid voor ons.<br/>
+                                Heilige Elisabeth van Hongarije, bid voor ons.<br/>
+                                Alle heiligen van God, bidt voor ons.
+                            </p>
+                            <p>
+                                Wees genadig, verlos ons, Heer.<br/>
+                                Van alle kwaad, verlos ons, Heer.<br/>
+                                Van alle zonde, verlos ons, Heer.<br/>
+                                Van de hinderlagen van de duivel, verlos ons, Heer.<br/>
+                                Van toorn, haat en alle kwaadwilligheid, verlos ons, Heer.<br/>
+                                Van de eeuwige dood, verlos ons, Heer.<br/>
+                                Door uw menswording, verlos ons, Heer.<br/>
+                                Door uw geboorte, verlos ons, Heer.<br/>
+                                Door uw doopsel en heilig vasten, verlos ons, Heer.<br/>
+                                Door uw kruis en lijden, verlos ons, Heer.<br/>
+                                Door uw dood en begrafenis, verlos ons, Heer.<br/>
+                                Door uw heilige verrijzenis, verlos ons, Heer.<br/>
+                                Door uw bewonderenswaardige hemelvaart, verlos ons, Heer.<br/>
+                                Door uw uitstorting van de heilige Geest, verlos ons, Heer.<br/>
+                                Door uw komst in heerlijkheid, verlos ons, Heer.
+                            </p>
+                            <p>
+                                Dat Gij ons wilt vergeven, wij bidden U, verhoor ons.<br/>
+                                Dat Gij onze geest wilt richten op hemelse verlangens, wij bidden U, verhoor ons.<br/>
+                                Dat Gij ons, onze broeders, naasten en weldoeners
+                                voor de eeuwige verwerping wilt behoeden, wij bidden U, verhoor ons.<br/>
+                                Dat Gij aan alle overleden gelovigen de eeuwige rust wilt schenken, wij bidden U, verhoor ons.<br/>
+                                Dat Gij de wereld bewaart voor ziekte, honger en oorlog, wij bidden U, verhoor ons.<br/>
+                                Dat Gij alle volkeren vrede en ware eendracht wilt verlenen, wij bidden U, verhoor ons.
+                            </p>
+                            <p>
+                                Dat Gij uw heilige kerk wilt besturen en bewaren, wij bidden U, verhoor ons.<br/>
+                                Dat Gij de paus en alle bedienaren van de kerk in hun heilig ambt wilt bewaren, wij bidden U, verhoor ons.<br/>
+                                Dat Gij allen, die in Christus geloven, eenheid wilt schenken, wij bidden U, verhoor ons.<br/>
+                                Dat Gij alle mensen tot het licht van het evangelie wilt brengen, wij bidden U, verhoor ons.
+                            </p>
+                            <p>
+                                Lam Gods, dat wegneemt de zonder der wereld, ontferm U over ons.<br/>
+                                Lam Gods, dat wegneemt de zonder der wereld, ontferm U over ons.<br/>
+                                Lam Gods, dat wegneemt de zonder der wereld, ontferm U over ons.<br/>
+                                Lam Gods, dat wegneemt de zonder der wereld, ontferm U over ons.
+                            </p>
+                            <p>
+                            God, onze toevlucht en onze kracht, wees hier aanwezig bij het gebed van uw kerk, Gij die zelf ons
+                            leert bidden, en laat ons werkelijk verkrijgen wat wij gelovig vragen. Door Christus onze Heer. 
+                            </p>
+                            <p>
+                            Amen
+                            </p>
+                        </div>
+                    </div>
+                    <div data-role="collapsible">
+                        <h2>Litanie van nederigheid</h2>
+                        <div>
+                            <p>
+                                Heer, ontferm u over ons<br/>
+                                Christus, ontferm u over ons<br/>
+                                Heer, ontferm u over ons, Christus hoor ons<br/>
+                                Christus, verhoor ons<br/>
+                                God, hemelse Vader, ontferm u over ons<br/>
+                                God de Zoon, verlosser van de wereld, ontferm u over ons<br/>
+                                God de heilige Geest, ontferm u over ons<br/>
+                                Heilige geest, een God, ontferm u over ons
+                            </p>
+                            <p>
+                                Jezus, zachtmoedig en nedering van hart, maar ons hart gelijk aan het uwe<br/>
+                                van het verlangen om gewaardeerd te worden, bevrijd me, o Jezus<br/>
+                                van het verlangen om beming te worden, bevrijd me, o Jezus<br/>
+                                van het verlangen om geëerd te worden, bevrijd me, o Jezus<br/>
+                                van het verlangen om geprezen te worden, bevrijd me, o Jezus<br/>
+                                van het verlangen om verkeur te genieten, bevrijd me, o Jezus<br/>
+                                van het verlangen geraadpleegd te worden, bevrijd me, o Jezus<br/>
+                                van het verlangen om bevestigd te worden, bevrijd me, o Jezus<br/>
+                                van het verlangen om populair te zijn, bevrijd me, o Jezus<br/>
+                                van de angst vernederd te worden, bevrijd me, o Jezus<br/>
+                                van de angst verstoten te worden, bevrijd me, o Jezus<br/>
+                                van de angst afgewezen te worden, bevrijd me, o Jezus<br/>
+                                van de angst als onbenul beschouwd te worden, bevrijd me, o Jezus<br/>
+                                van de angst vergeten te worden, bevrijd me, o Jezus<br/>
+                                van de angst benadeeld te worden, bevrijd me, o Jezus<br/>
+                                van de angst belachelijk gemaakt te worden, bevrijd me, o Jezus<br/>
+                                van de angst verdacht te worden, bevrijd me, o Jezus
+                            </p>
+                            <p>
+                                Dat anderen meer bemind worden dan ik, Jezus, geef me de genade het te verlangen<br/>
+                                dat anderen meer geacht worden dan ik, Jezus, geef me de genade het te verlangen<br/>
+                                dat in de achting van de wereld, anderen mogen groeien en ik mag verdwijenen, Jezus geef me de genad om het te verlangen<br/>
+                                dat andere mogen gekozen worden, en ik opzij gelaten, Jezus, geef me de genade het te verlangen<br/>
+                                dat anderen geprezen mogen worden en ik onopgemerkt, Jezus, geef me de genade het te verlangen<br/>
+                                dat anderen mogen de voorkeur krijgen in alles, Jezus, geef me de genade het te verlangen<br/>
+                                dat anderen heiliger mogen worden dan ik, op voorwaarde dat ik zo heilig worde als ik kan, Jezus geef me de genade het te verlangen
+                            </p>
+                            <p>
+                                Lam Gods, dat wegneemt de zonden der wereld, wees genadig, spaar ons, Heer<br/>
+                                Lam Gods, dat wegneemt de zonden der wereld, wees genadig, hoor ons, Heer<br/>
+                                Lam Gods, dat wegneemt de zonder der wereld, wees genadig, ontferm u over ons, Heer
+                            </p>
+                            <p>
+                                Laat ons bidden<br/>
+                                Heer Jezus Christu, die gezegd hebt: “vraag en je zult krijgen, zoek en je zult vinden, klop en u zal worden opengedaan, verleen ons, die u smeken, de genade van uw heilige liefde, dat we van ganser harte mogen beminnen door al onze woorden en werken en nooit ophouden u te loven.<br/> 
+                                Heer, geef ons een eeuwige vrees evenals een eeuwige liefde voor uw heilige naam, want u houdt niet op zorg te dragen voor hen die zichzelf gevestigd hebben op de rots van uw liefde. Die leeft en heerst in alle eeuwen der eeuwen. Amen.
+                            </p>
+                        </div>
+                    </div>
                 </div>
                 <!-- collapsible set -->
             </div>
