--- a/gebeden.html
+++ b/gebeden.html
@@ -50,8 +50,10 @@
                             <label for="la">Latijn</label>
                         </fieldset>
                     </div>
-                    <div data-role="collapsible">
+                    <div data-role="collapsible" class="fullwidthimage">
                         <h2>Onze Vader</h2>
+                        <img class="onzevader pic hidden" alt="Heilig Hart van Jezus"
+                            src="img/heilighartvanjezus.jpg" />
                         <div class="onzevader nl">
                             <p>Onze Vader, <br />die in de hemel zijt,<br /> uw Naam worde
                                 geheiligd, <br /> uw Rijk kome, <br /> uw wil geschiede op aarde
@@ -94,10 +96,14 @@
                             <label for="vl">Vlaams</label>
                             <input type="radio" name="onzevader" id="la" value="la" />
                             <label for="la">Latijn</label>
+                            <input type="radio" name="onzevader" id="pic" value="pic" />
+                            <label for="pic">Beeldtenis</label>
                         </fieldset>
                     </div>
-                    <div data-role="collapsible">
+                    <div data-role="collapsible" class="fullwidthimage">
                         <h2>Wees gegroet</h2>
+                        <img class="weesgegroet pic hidden" alt="Heilig Hart van Maria"
+                            src="img/heilighartvanmaria.jpg" />
                         <div class="weesgegroet nl">
                             <p>Wees gegroet Maria, vol van genade.<br /> De Heer is met U.<br /> Gij
                                 zijt de gezegende onder de vrouwen.<br /> En gezegend is
@@ -130,6 +136,8 @@
                             <label for="vl">Vlaams</label>
                             <input type="radio" name="weesgegroet" id="la" value="la" />
                             <label for="la">Latijn</label>
+                            <input type="radio" name="weesgegroet" id="pic" value="pic" />
+                            <label for="pic">Beeldtenis</label>
                         </fieldset>
                     </div>
                     <div data-role="collapsible">
