zonnelied toegevoegd en correctie in litanie van nederigheid

--- a/gebeden.html
+++ b/gebeden.html
@@ -588,7 +588,7 @@
                                 ons, Heer<br /> Lam Gods, dat wegneemt de zonden der wereld, wees
                                 genadig, hoor ons, Heer<br /> Lam Gods, dat wegneemt de zonder der
                                 wereld, wees genadig, ontferm u over ons, Heer </p>
-                            <p> Laat ons bidden<br /> Heer Jezus Christu, die gezegd hebt: “vraag en
+                            <p> Laat ons bidden<br /> Heer Jezus Christus, die gezegd hebt: “vraag en
                                 je zult krijgen, zoek en je zult vinden, klop en u zal worden
                                 opengedaan, verleen ons, die u smeken, de genade van uw heilige
                                 liefde, dat we van ganser harte mogen beminnen door al onze woorden
@@ -609,6 +609,46 @@
                                 </a>
                             </li>
                         </ul>
+                    </div>
+                    <div data-role="collapsible">
+                        <h2>Zonnelied van St. Franciscus</h2>
+                        <div>
+                        <p>Allerhoogste, almachtige, goede Heer,
+van U zijn de lof, de roem, de eer en alle zegen.
+U alleen, Allerhoogste, komen zij toe
+en geen mens is waardig uw naam te noemen.</p><p>
+Wees geprezen, mijn Heer met al Uw schepselen,
+vooral door mijnheer broeder zon,
+die de dag is en door wie Gij ons verlicht.
+En hij is mooi en straalt met grote pracht;
+van U, Allerhoogste, draagt hij het teken.</p><p>
+Wees geprezen, mijn Heer, door zuster maan en de sterren.
+Aan de hemel hebt Gij ze gevormd, helder en kostbaar en mooi.</p><p>
+Wees geprezen, mijn Heer, door broeder wind
+en door de lucht, bewolkt of helder, en ieder jaargetijde,
+door wie Gij het leven van uw schepselen onderhoudt.</p><p>
+Wees geprezen, mijn Heer, door zuster water,
+die heel nuttig is en nederig, kostbaar en kuis.</p><p>
+Wees geprezen, mijn Heer, door broeder vuur,
+door wie Gij voor ons de nacht verlicht;
+en hij is mooi en vrolijk, stoer en sterk.</p><p>
+Wees geprezen, mijn Heer, door onze zuster, moeder aarde,
+die ons voedt en leidt,
+en allerlei vruchten voortbrengt, bonte bloemen en planten.</p><p>
+Wees geprezen, mijn Heer, door wie omwille van uw liefde
+vergiffenis schenken, en ziekte en verdrukking dragen.
+Gelukkig wie dat dragen in vrede,
+want door U, Allerhoogste, worden zij gekroond.</p><p>
+Wees geprezen, mijn Heer, door onze zuster de lichamelijke dood,
+die geen levend mens kan ontvluchten.</p><p>
+Wee hen die in doodzonde sterven;
+gelukkig wie zij in uw allerheiligste wil vindt,
+want de tweede dood zal hun geen kwaad doen.</p><p>
+Prijs en zegen mijn Heer,
+en dank en dien Hem in grote nederigheid.</p>
+                            <p>Amen. </p>
+                            <p><small><i>Het Zonnelied (Italiaans: Cantico del Frate Sole) is een gebed uit de rooms-katholieke traditie geschreven door de heilige Franciscus van Assisi. Nederlandse vertaling uit "Franciscus van Assisi, de Geschriften" (G.P. Freeman en anderen, Haarlem: Gottmer, 2006)</i></small></p>
+                        </div>
                     </div>
                 </div>
                 <!-- collapsible set -->
