--- a/filmpjes.html
+++ b/filmpjes.html
@@ -48,7 +48,7 @@
                         <img src="img/petrus.jpg" />
                         <ul data-role="listview">
                             <li>
-                                <a href="http://www.youtube.com/watch?v=-3ujNvgay-w">
+                                <a href="http://www.youtube.com/watch?feature=player_detailpage&v=qi5mhn3-5vI#t=370s">
                                     <img src="img/pausfranciscus.png" />Habemus Papam - Franciscus<br/><small>13 maart 2013</small>
                                 </a>
                             </li>
