--- a/gebeden.html
+++ b/gebeden.html
@@ -252,6 +252,16 @@
                         </fieldset>
                     </div>
                     <div data-role="collapsible">
+                        <h2>Rozenkrans</h2>
+                        <ul data-role="listview">
+                            <li>
+                                <a href="http://www.startdestilte.be/rozenkrans">
+                                    <h2>Leer de rozenkrans bidden</h2>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div data-role="collapsible">
                         <h2>Tien Geboden van God</h2>
                         <div class="tiengeboden nl">
                             <p>Ik ben de Heer, uw God.<br /> 1. Gij zult geen afgoden vereren, maar
