toevoeging van dithyrambe op het allerheiligste

--- a/luisterboeken.html
+++ b/luisterboeken.html
@@ -149,7 +149,14 @@
                             href="http://www.archive.org/download/LibrivoxM4bCollectionAudiobooks_8/DeNavolgingVanJezusChristus.m4b"
                             rel="external">
                             <img src="img/navolging-luisterboek.jpg" />De navolging van
-                            Christus<br /><small>98 MB - bron:www.librivox.nl</small>
+                            Christus (Thomas a Kempis)<br /><small>98 MB - bron:www.librivox.nl</small>
+                        </a>
+                    </li>
+                    <li data-icon="plus">
+                        <a
+                            href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/audiobooks/dithyrambe.mp3"
+                            rel="external">
+                            <img src="img/dithyrambe.png" />Dithyrambe op het Allerheiligste (Cornelius Broere)<br /><small>9 MB - lofdicht op het mirakel van Amsterdam</small>
                         </a>
                     </li>
                 </ul>
